# mode-ssm

./: .gitignore  CLAUDE.md  IMPLEMENTATION_STATUS.md  INSTALL.md  MULTI_SESSION_TRAINING.md  README.md  RNNT_LOSS_FIX.md  RNNT_LOSS_SCALING_FIX.md  RNNT_WARMUP_FIX.md  SESSION_SUMMARY.md  WANDB_SETUP.md  create_test_data.py  dataset.md  implementation.md  one-pager.md  pyproject.toml  requirements.txt  test_rnnt_scaling.py  test_rnnt_warmup.py
.specify/memory/: constitution.md
configs/: advanced_features.yaml  analyze_drift.yaml  evaluate.yaml  lm_fusion.yaml  logging.yaml  model_mode_ssm.yaml  submission.yaml  train.yaml  tta.yaml
datasets/: brain2text.py  distributed_sampler.py  multi_session_dataset.py  phoneme_vocab.py  transforms.py
mode_ssm/: __init__.py  checkpoint_manager.py  evaluation_metrics.py  submission_formatter.py  training_stages.py
mode_ssm/models/: __init__.py  denoise_flow.py  lm_fusion.py  mode_head.py  mode_ssm_model.py  preprocessor.py  rnnt_ctc_heads.py  ssm_encoder.py  tta_loop.py
mode_ssm/utils/: error_handling.py  monitoring.py  performance.py  rich_logging.py
scripts/: analyze_neural_drift.py  demo_rich_logging.py  distributed_utils.py  evaluate_model.py  make_submission.py  train.py  validate_submission.py
specs/001-implement-mode-ssm/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-implement-mode-ssm/checklists/: requirements.md
specs/001-implement-mode-ssm/contracts/: model_components.py  training_api.py
tests/fixtures/: synthetic_neural.py
tests/integration/: test_curriculum.py  test_end_to_end.py  test_submission_generation.py  test_tta_adaptation.py
tests/unit/: test_decoders.py  test_mode_head.py  test_preprocessor.py  test_ssm_encoder.py  test_submission_format.py  test_tta_loop.py
