[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mode-ssm"
version = "0.1.0"
description = "MODE-SSM: Mode-Aware State-Space Decoder for Brain-to-Text"
authors = [{name = "Brain-to-Text Challenge Team", email = "team@mode-ssm.ai"}]
readme = "README.md"
requires-python = ">=3.10,<3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "torch>=2.2.0,<2.3",
    "torchvision>=0.17.0",
    "torchaudio>=2.2.0",
    # "mamba-ssm>=1.2.0,<1.3",  # Optional - using mock implementation
    # "nemo_toolkit[asr]>=1.22.0,<1.23",  # Optional
    "hydra-core>=1.3.2,<1.4",
    "h5py>=3.10.0",
    "jiwer>=3.0.0",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "rich>=13.0.0",
    "wandb>=0.16.0",
    "tensorboard>=2.15.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "causal-conv1d>=1.5.3.post1",
    "mamba-ssm[dev]>=2.2.6.post3",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]

[project.urls]
"Homepage" = "https://github.com/brain2text/mode-ssm"
"Bug Reports" = "https://github.com/brain2text/mode-ssm/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["mode_ssm*", "datasets*", "scripts*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "gpu: marks tests that require GPU",
]
